tests/NormalTests/paczka1/small_fuzzy/94228092.err
Error in line 1: P9vJjbG A990 11,0
Error in line 8: bowreL1 A990 25,0
